add_executable(CubeRecognition
    AssignColors.cpp
    AssignColors.hpp
    ConnectLabelContours.cpp
    ConnectLabelContours.hpp
    cube_recognition_main.cpp
    FindLabelContours.cpp
    FindLabelContours.hpp
    FindLabels.cpp
    FindLabels.hpp
    Image.hpp
    LabelContour.cpp
    LabelContour.hpp
    Settings.hpp
    SolveCamera.cpp
    SolveCamera.hpp
    VectorMath.hpp
)

target_link_libraries(CubeRecognition
    ${OpenCV_LIBS}
)
