add_executable(CubeRecognition
    AssignColors.cpp
    AssignColors.hpp
    ConnectLabelContours.cpp
    ConnectLabelContours.hpp
    cube_recognition_main.cpp
    FindLabelContours.cpp
    FindLabelContours.hpp
    FindLabels.cpp
    FindLabels.hpp
    Image.hpp
    LabelContour.cpp
    LabelContour.hpp
    ObserveLabels.cpp
    ObserveLabels.hpp
    ProbabalisticCube.cpp
    ProbabalisticCube.hpp
    Settings.hpp
    SolveCamera.cpp
    SolveCamera.hpp
    Timer.cpp
    Timer.hpp
    VectorMath.hpp
)

target_link_libraries(CubeRecognition
    SolverLib
    ${OpenCV_LIBS}
)
